use docker-compose  instead of python3-compose, which is  not available for 22.04

--- a/resources/playbook/roles/bibigrid/tasks/030-docker.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/030-docker.yaml
@@ -3,7 +3,7 @@
     name:
       - docker.io
       - python3-docker
-      - python3-compose       # legacy python compose
+      - docker-compose
       - docker-compose-v2
     state: present
   tags: install
