--- a/resources/playbook/roles/bibigrid/tasks/900-theia.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/900-theia.yaml
@@ -39,17 +39,17 @@
 
 - name: Install nvm
   shell: |
-    set -o pipefail && curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.39.1/install.sh | NVM_DIR={{ nvm_install_dir }} /bin/bash
+    set -o pipefail && curl -o- https://raw.githubusercontent.com/creationix/nvm/{{ bibigrid_nvm_version }}/install.sh | NVM_DIR={{ bibigrid_nvm_install_dir }} /bin/bash
   args:
-    creates: "{{ nvm_install_dir }}/nvm.sh"
+    creates: "{{ bibigrid_nvm_install_dir }}/nvm.sh"
     executable: bash
   tags:
     - skip_ansible_lint
 
-- name: Install node 16 and yarn
+- name: Install node and yarn
   shell: |
-    source {{ nvm_install_dir }}/nvm.sh
-    nvm install 16
+    source {{ bibigrid_nvm_install_dir }}/nvm.sh
+    nvm install {{ bibigrid_node_version }}
     npm install -g yarn
   args:
     executable: bash
@@ -61,10 +61,10 @@
   block:
     - name: Install prebuild theia
       shell: |
-        curl -o- https://bibiserv.cebitec.uni-bielefeld.de/resources/bibigrid/plugins/theia-ide_node16.tar.gz | tar -xzf -
+        curl -o- https://bibiserv.cebitec.uni-bielefeld.de/resources/bibigrid/plugins/theia-ide_node{{ bibigrid_node_version }}.tar.gz | tar -xzf -
       args:
         chdir: "/opt"
-        creates: "{{ theia_ide_install_dir }}"
+        creates: "{{ bibigrid_theia_ide_install_dir }}"
       tags:
         - skip_ansible_lint
 
@@ -72,23 +72,23 @@
   block:
     - name: Create IDE build dir
       file:
-        path: "{{ theia_ide_install_dir }}"
+        path: "{{ bibigrid_theia_ide_install_dir }}"
         state: directory
         mode: "0o755"
 
     - name: Copy IDE configuration to IDE build dir
       template:
         src: theia/package.json.j2
-        dest: "{{ theia_ide_install_dir }}/package.json"
+        dest: "{{ bibigrid_theia_ide_install_dir }}/package.json"
         mode: "0o644"
 
     - name: Build ide
       shell: |
-            source {{ nvm_install_dir }}/nvm.sh
+            source {{ bibigrid_nvm_install_dir }}/nvm.sh
             yarn
             yarn theia build
       args:
-        chdir: "{{ theia_ide_install_dir }}"
+        chdir: "{{ bibigrid_theia_ide_install_dir }}"
         executable: bash
       tags:
         - skip_ansible_lint
@@ -96,7 +96,7 @@
 - name: Generate IDE start skript to /usr/local/bin
   template:
     src: theia/theia-ide.sh.j2
-    dest: "{{ theia_ide_install_dir }}/theia-ide.sh"
+    dest: "{{ bibigrid_theia_ide_install_dir }}/theia-ide.sh"
     mode: "0o755"
 
 - name: Generate systemd service
