fix missing prefix

--- a/resources/playbook/roles/bibigrid/tasks/900-theia.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/900-theia.yaml
@@ -10,7 +10,7 @@
 
 - name: Create NVM install dir
   file:
-    path: "{{ nvm_install_dir }}"
+    path: "{{ bibigrid_nvm_install_dir }}"
     state: directory
     mode: "0o755"
 
