moved zabbix api installation to server only

--- a/resources/playbook/roles/bibigrid/tasks/011-zabbix-server.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/011-zabbix-server.yaml
@@ -1,6 +1,10 @@
 # -------------------
 # -- Zabbix Server --
 # -------------------
+- name: Install zabbix python-api in BiBiGrid virtual environment
+  ansible.builtin.pip:
+    name: zabbix-api
+    virtualenv: /opt/bibigrid-venv
 
 - name: Debian based OS (Install database & Zabbix server)
   apt:
