--- a/resources/playbook/roles/bibigrid/tasks/002-wireguard-vpn.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/002-wireguard-vpn.yaml
@@ -1,3 +1,19 @@
+- name: Enable ip forwarding
+  sysctl:
+    name: net.ipv4.ip_forward
+    value: 1
+    sysctl_set: true
+    state: present
+    reload: true
+
+- name: Enable tcp mtu probing
+  sysctl:
+    name: net.ipv4.tcp_mtu_probing
+    value: 1
+    sysctl_set: true
+    state: present
+    reload: true
+
 - name: Install WireGuard
   apt:
     name: wireguard
@@ -25,18 +41,5 @@
   notify:
     - Systemd-networkd restart
 
-- name: Enable ip forwarding
-  sysctl:
-    name: net.ipv4.ip_forward
-    value: 1
-    sysctl_set: true
-    state: present
-    reload: true
-
-- name: Enable tcp mtu probing
-  sysctl:
-    name: net.ipv4.tcp_mtu_probing
-    value: 1
-    sysctl_set: true
-    state: present
-    reload: true
+- name: Flush handlers
+  meta: flush_handlers
