moved from docker-compose-v2 to docker-compose-plugin

--- a/resources/playbook/roles/bibigrid/tasks/030-docker.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/030-docker.yaml
@@ -1,10 +1,29 @@
+- name: Add Docker's official GPG key
+  ansible.builtin.apt_key:
+    url: https://download.docker.com/linux/ubuntu/gpg
+    keyring: /etc/apt/keyrings/docker.gpg
+    state: present
+
+
+- name: Add Docker repository
+  ansible.builtin.apt_repository:
+    repo: >-
+      deb [arch={{ arch_mapping[ansible_architecture] | default(ansible_architecture) }}
+      signed-by=/etc/apt/keyrings/docker.gpg]
+      https://download.docker.com/linux/ubuntu {{ ansible_lsb.codename }} stable
+    filename: docker
+    state: present
+  vars:
+    arch_mapping:
+      x86_64: amd64
+
 - name: Install Docker
   apt:
     name:
       - docker.io
       - python3-docker
       - docker-compose
-      - docker-compose-v2
+      - docker-compose-plugin
     state: present
   tags: install
 
