--- a/resources/tests/bibigrid_test_example.yaml
+++ b/resources/tests/bibigrid_test_example.yaml
@@ -5,6 +5,6 @@
   flavor: de.NBI small
   image: ^Ubuntu 22\.04 LTS \(.*\)$
   sshUser: ubuntu
-  network: # network
+  network: # network id
 
   snapshotImage: # name of a snapshot to create volume from. Volume needs to be deleted manually afterwards (optional)
