--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,8 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-include = ["bibigrid*", "resources"]
+include = ["bibigrid*",]
 exclude = ["tests*"]
 
+[tool.setuptools.package-data]
+"bibigrid.resources" = ["**/*"]
