--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -12,8 +12,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
+          pip install .
       - name: ansible_lint
         run: ansible-lint resources/playbook/roles/bibigrid/tasks/main.yaml
       - name: pylint_lint
