--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install .
+          pip install ".[dev]"
       - name: ansible_lint
         run: ansible-lint resources/playbook/roles/bibigrid/tasks/main.yaml
       - name: pylint_lint
