fixed name of handler

--- a/bibigrid/resources/playbook/roles/bibigrid/handlers/main.yml
+++ b/bibigrid/resources/playbook/roles/bibigrid/handlers/main.yml
@@ -3,7 +3,7 @@
     name: nfs-kernel-server
     state: restarted
 
-- name: Restart Docker and its socket
+- name: Docker
   systemd:
     name: "{{ item }}"
     state: restarted
