--- a/Dockerfile-rest
+++ b/Dockerfile-rest
@@ -1,18 +1,18 @@
-FROM python:3.9-slim
+FROM python:3.12-slim
 
 # Set the working directory to /app
 WORKDIR /app
 
 # Copy the requirements files into the container
-COPY requirements-rest.txt .
-COPY requirements.txt .
+COPY pyproject.toml .
+COPY uv.lock .
 
-# Install the dependencies listed in the requirements files
-RUN pip install -r requirements-rest.txt
-RUN pip install -r requirements.txt
+RUN apt-get update && apt-get install -y openssh-client gcc
+
+# Install the dependencies listed in the pyproject.toml with rest dependencies
+RUN pip install '.[rest]'
 
 # Install SSH keygen
-RUN apt-get update && apt-get install -y openssh-client
 
 # Copy the application code into the container
 COPY . .
@@ -25,3 +25,4 @@ EXPOSE 8080
 
 # Run the command to start the REST API when the container is launched
 CMD ["./bibigrid_rest.sh"]
+
