Fix docker restarts even when no change (#673)
* fix docker restarts even when no change

* changed to better notify structure

* fixed name of handler

--- a/bibigrid/resources/playbook/roles/bibigrid/handlers/main.yml
+++ b/bibigrid/resources/playbook/roles/bibigrid/handlers/main.yml
@@ -5,8 +5,12 @@
 
 - name: Docker
   systemd:
-    name: docker
+    name: "{{ item }}"
     state: restarted
+  loop:
+    - docker.socket
+    - docker
+
 
 - name: Munge
   systemd:
