--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -2,16 +2,16 @@
 #    uv pip compile --all-extras pyproject.toml
 annotated-types==0.7.0
     # via pydantic
-ansible==11.9.0
+ansible==12.0.0
     # via bibigrid (pyproject.toml)
 ansible-compat==25.8.1
     # via ansible-lint
-ansible-core==2.18.8
+ansible-core==2.19.2
     # via
     #   ansible
     #   ansible-compat
     #   ansible-lint
-ansible-lint==24.9.0
+ansible-lint==25.9.0
     # via bibigrid (pyproject.toml)
 anyio==4.10.0
     # via
@@ -31,7 +31,7 @@ autopage==0.5.2
     # via cliff
 bcrypt==4.3.0
     # via paramiko
-black==25.1.0
+black==25.9.0
     # via ansible-lint
 bracex==2.6
     # via wcmatch
@@ -40,13 +40,14 @@ certifi==2025.8.3
     #   httpcore
     #   httpx
     #   requests
-cffi==1.17.1
+cffi==2.0.0
     # via
+    #   ansible-lint
     #   cryptography
     #   pynacl
 charset-normalizer==3.4.3
     # via requests
-click==8.2.1
+click==8.3.0
     # via
     #   bibigrid (pyproject.toml)
     #   black
@@ -57,10 +58,11 @@ cliff==4.11.0
     #   python-openstackclient
 cmd2==2.7.0
     # via cliff
-cryptography==44.0.3
+cryptography==46.0.1
     # via
     #   bibigrid (pyproject.toml)
     #   ansible-core
+    #   ansible-lint
     #   openstacksdk
     #   paramiko
 debtcollector==3.0.0
@@ -75,13 +77,15 @@ decorator==5.2.1
     #   openstacksdk
 dill==0.4.0
     # via pylint
-dogpile-cache==1.4.0
+distro==1.9.0
+    # via ansible-lint
+dogpile-cache==1.4.1
     # via openstacksdk
-executing==2.2.0
+executing==2.2.1
     # via stack-data
-fastapi==0.115.14
+fastapi==0.117.1
     # via bibigrid (pyproject.toml)
-filelock==3.16.1
+filelock==3.19.1
     # via
     #   bibigrid (pyproject.toml)
     #   ansible-lint
@@ -100,9 +104,11 @@ idna==3.10
     #   requests
 importlib-metadata==8.7.0
     # via ansible-lint
+invoke==2.2.0
+    # via paramiko
 ipdb==0.13.13
     # via bibigrid (pyproject.toml)
-ipython==9.4.0
+ipython==9.5.0
     # via ipdb
 ipython-pygments-lexers==1.1.1
     # via ipython
@@ -113,7 +119,7 @@ iso8601==2.1.0
     #   oslo-utils
     #   python-novaclient
     #   python-openstackclient
-isort==5.13.2
+isort==6.0.1
     # via pylint
 jedi==0.19.2
     # via ipython
@@ -129,7 +135,7 @@ jsonschema==4.25.1
     # via
     #   ansible-compat
     #   ansible-lint
-jsonschema-specifications==2025.4.1
+jsonschema-specifications==2025.9.1
     # via jsonschema
 keystoneauth1==5.1.3
     # via
@@ -182,7 +188,7 @@ osc-lib==4.0.2
     # via python-openstackclient
 oslo-config==10.0.0
     # via python-keystoneclient
-oslo-i18n==6.5.1
+oslo-i18n==6.6.0
     # via
     #   osc-lib
     #   oslo-config
@@ -191,11 +197,11 @@ oslo-i18n==6.5.1
     #   python-keystoneclient
     #   python-novaclient
     #   python-openstackclient
-oslo-serialization==5.7.0
+oslo-serialization==5.8.0
     # via
     #   python-keystoneclient
     #   python-novaclient
-oslo-utils==9.0.0
+oslo-utils==9.1.0
     # via
     #   osc-lib
     #   oslo-serialization
@@ -211,7 +217,7 @@ packaging==25.0
     #   black
     #   oslo-utils
     #   python-keystoneclient
-paramiko==3.5.1
+paramiko==4.0.0
     # via
     #   bibigrid (pyproject.toml)
     #   sshtunnel
@@ -234,10 +240,9 @@ pbr==7.0.1
     #   python-keystoneclient
     #   python-novaclient
     #   python-openstackclient
-    #   stevedore
 pexpect==4.9.0
     # via ipython
-platformdirs==4.3.8
+platformdirs==4.4.0
     # via
     #   black
     #   pylint
@@ -246,17 +251,17 @@ prettytable==3.16.0
     #   cliff
     #   python-cinderclient
     #   python-novaclient
-prompt-toolkit==3.0.51
+prompt-toolkit==3.0.52
     # via ipython
-psutil==7.0.0
+psutil==7.1.0
     # via oslo-utils
 ptyprocess==0.7.0
     # via pexpect
 pure-eval==0.2.3
     # via stack-data
-pycparser==2.22
+pycparser==2.23
     # via cffi
-pydantic==2.11.7
+pydantic==2.11.9
     # via
     #   bibigrid (pyproject.toml)
     #   fastapi
@@ -267,13 +272,13 @@ pygments==2.19.2
     #   ipython
     #   ipython-pygments-lexers
     #   rich
-pylint==3.3.0
+pylint==3.3.8
     # via bibigrid (pyproject.toml)
-pynacl==1.5.0
+pynacl==1.6.0
     # via paramiko
-pyparsing==3.2.3
+pyparsing==3.2.5
     # via oslo-utils
-pyperclip==1.9.0
+pyperclip==1.10.0
     # via cmd2
 pysocks==1.7.1
     # via bibigrid (pyproject.toml)
@@ -281,16 +286,18 @@ python-cinderclient==9.6.0
     # via
     #   bibigrid (pyproject.toml)
     #   python-openstackclient
-python-keystoneclient==5.6.0
+python-keystoneclient==5.7.0
     # via
     #   bibigrid (pyproject.toml)
     #   python-openstackclient
-python-novaclient==18.10.0
+python-novaclient==18.11.0
     # via
     #   bibigrid (pyproject.toml)
     #   python-openstackclient
 python-openstackclient==6.0.0
     # via bibigrid (pyproject.toml)
+pytokens==0.1.10
+    # via black
 pyyaml==6.0.2
     # via
     #   bibigrid (pyproject.toml)
@@ -304,6 +311,7 @@ pyyaml==6.0.2
     #   yamllint
 referencing==0.36.2
     # via
+    #   ansible-lint
     #   jsonschema
     #   jsonschema-specifications
 requests==2.32.5
@@ -315,24 +323,24 @@ requests==2.32.5
     #   python-keystoneclient
 requestsexceptions==1.4.0
     # via openstacksdk
-resolvelib==1.0.1
+resolvelib==1.2.0
     # via ansible-core
 rfc3986==2.0.0
     # via oslo-config
 rich==14.1.0
-    # via
-    #   ansible-lint
-    #   rich-argparse
+    # via rich-argparse
 rich-argparse==1.7.1
     # via cmd2
-rpds-py==0.27.0
+rpds-py==0.27.1
     # via
     #   jsonschema
     #   referencing
 ruamel-yaml==0.18.15
     # via ansible-lint
 ruamel-yaml-clib==0.2.12
-    # via ruamel-yaml
+    # via
+    #   ansible-lint
+    #   ruamel-yaml
 schema==0.7.7
     # via bibigrid (pyproject.toml)
 seedir==0.5.1
@@ -349,9 +357,9 @@ sshtunnel==0.4.0
     # via bibigrid (pyproject.toml)
 stack-data==0.6.3
     # via ipython
-starlette==0.46.2
+starlette==0.48.0
     # via fastapi
-stevedore==5.4.1
+stevedore==5.5.0
     # via
     #   cliff
     #   dogpile-cache
@@ -374,13 +382,14 @@ traitlets==5.14.3
     # via
     #   ipython
     #   matplotlib-inline
-typing-extensions==4.14.1
+typing-extensions==4.15.0
     # via
     #   anyio
     #   fastapi
     #   pydantic
     #   pydantic-core
     #   referencing
+    #   starlette
     #   typing-inspection
 typing-inspection==0.4.1
     # via pydantic
@@ -390,7 +399,7 @@ tzdata==2025.2
     #   oslo-utils
 urllib3==2.5.0
     # via requests
-uvicorn==0.34.3
+uvicorn==0.36.0
     # via bibigrid (pyproject.toml)
 wcmatch==10.1
     # via ansible-lint
