--- a/requirements-rest.txt
+++ b/requirements-rest.txt
@@ -14,13 +14,13 @@ bcrypt==4.3.0
     # via paramiko
 certifi==2025.8.3
     # via requests
-cffi==1.17.1
+cffi==2.0.0
     # via
     #   cryptography
     #   pynacl
 charset-normalizer==3.4.3
     # via requests
-click==8.2.1
+click==8.3.0
     # via
     #   bibigrid (pyproject.toml)
     #   uvicorn
@@ -30,7 +30,7 @@ cliff==4.11.0
     #   python-openstackclient
 cmd2==2.7.0
     # via cliff
-cryptography==44.0.3
+cryptography==46.0.1
     # via
     #   bibigrid (pyproject.toml)
     #   openstacksdk
@@ -45,13 +45,13 @@ decorator==5.2.1
     #   ipdb
     #   ipython
     #   openstacksdk
-dogpile-cache==1.4.0
+dogpile-cache==1.4.1
     # via openstacksdk
-executing==2.2.0
+executing==2.2.1
     # via stack-data
-fastapi==0.115.14
+fastapi==0.117.1
     # via bibigrid (pyproject.toml)
-filelock==3.16.1
+filelock==3.19.1
     # via bibigrid (pyproject.toml)
 h11==0.16.0
     # via uvicorn
@@ -59,9 +59,11 @@ idna==3.10
     # via
     #   anyio
     #   requests
+invoke==2.2.0
+    # via paramiko
 ipdb==0.13.13
     # via bibigrid (pyproject.toml)
-ipython==9.4.0
+ipython==9.5.0
     # via ipdb
 ipython-pygments-lexers==1.1.1
     # via ipython
@@ -125,7 +127,7 @@ osc-lib==4.0.2
     # via python-openstackclient
 oslo-config==10.0.0
     # via python-keystoneclient
-oslo-i18n==6.5.1
+oslo-i18n==6.6.0
     # via
     #   osc-lib
     #   oslo-config
@@ -134,11 +136,11 @@ oslo-i18n==6.5.1
     #   python-keystoneclient
     #   python-novaclient
     #   python-openstackclient
-oslo-serialization==5.7.0
+oslo-serialization==5.8.0
     # via
     #   python-keystoneclient
     #   python-novaclient
-oslo-utils==9.0.0
+oslo-utils==9.1.0
     # via
     #   osc-lib
     #   oslo-serialization
@@ -150,7 +152,7 @@ packaging==25.0
     # via
     #   oslo-utils
     #   python-keystoneclient
-paramiko==3.5.1
+paramiko==4.0.0
     # via
     #   bibigrid (pyproject.toml)
     #   sshtunnel
@@ -168,7 +170,6 @@ pbr==7.0.1
     #   python-keystoneclient
     #   python-novaclient
     #   python-openstackclient
-    #   stevedore
 pexpect==4.9.0
     # via ipython
 prettytable==3.16.0
@@ -176,17 +177,17 @@ prettytable==3.16.0
     #   cliff
     #   python-cinderclient
     #   python-novaclient
-prompt-toolkit==3.0.51
+prompt-toolkit==3.0.52
     # via ipython
-psutil==7.0.0
+psutil==7.1.0
     # via oslo-utils
 ptyprocess==0.7.0
     # via pexpect
 pure-eval==0.2.3
     # via stack-data
-pycparser==2.22
+pycparser==2.23
     # via cffi
-pydantic==2.11.7
+pydantic==2.11.9
     # via
     #   bibigrid (pyproject.toml)
     #   fastapi
@@ -197,11 +198,11 @@ pygments==2.19.2
     #   ipython
     #   ipython-pygments-lexers
     #   rich
-pynacl==1.5.0
+pynacl==1.6.0
     # via paramiko
-pyparsing==3.2.3
+pyparsing==3.2.5
     # via oslo-utils
-pyperclip==1.9.0
+pyperclip==1.10.0
     # via cmd2
 pysocks==1.7.1
     # via bibigrid (pyproject.toml)
@@ -209,11 +210,11 @@ python-cinderclient==9.6.0
     # via
     #   bibigrid (pyproject.toml)
     #   python-openstackclient
-python-keystoneclient==5.6.0
+python-keystoneclient==5.7.0
     # via
     #   bibigrid (pyproject.toml)
     #   python-openstackclient
-python-novaclient==18.10.0
+python-novaclient==18.11.0
     # via
     #   bibigrid (pyproject.toml)
     #   python-openstackclient
@@ -257,9 +258,9 @@ sshtunnel==0.4.0
     # via bibigrid (pyproject.toml)
 stack-data==0.6.3
     # via ipython
-starlette==0.46.2
+starlette==0.48.0
     # via fastapi
-stevedore==5.4.1
+stevedore==5.5.0
     # via
     #   cliff
     #   dogpile-cache
@@ -276,12 +277,13 @@ traitlets==5.14.3
     # via
     #   ipython
     #   matplotlib-inline
-typing-extensions==4.14.1
+typing-extensions==4.15.0
     # via
     #   anyio
     #   fastapi
     #   pydantic
     #   pydantic-core
+    #   starlette
     #   typing-inspection
 typing-inspection==0.4.1
     # via pydantic
@@ -291,7 +293,7 @@ tzdata==2025.2
     #   oslo-utils
 urllib3==2.5.0
     # via requests
-uvicorn==0.34.3
+uvicorn==0.36.0
     # via bibigrid (pyproject.toml)
 wcwidth==0.2.13
     # via
