--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,16 @@
 [project]
 name = "bibigrid"
 version = "3.1.0"
-description = "Add your description here"
+description = "BiBiGrid is a cloud cluster creation and management tool."
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "pysocks",
     "ipdb",
-    "click",
+    "click~=8.3.0",
     "openstacksdk==0.62",
     "mergedeep~=1.3.4",
-    "paramiko~=3.5.0",
+    "paramiko~=4.0.0",
     "python-cinderclient",
     "python-keystoneclient",
     "python-novaclient",
@@ -20,23 +20,23 @@ dependencies = [
     "sshtunnel~=0.4.0",
     "sympy~=1.12",
     "seedir~=0.5.0",
-    "cryptography~=44.0.2",
-    "pydantic~=2.11.3",
+    "cryptography~=46.0.1",
+    "pydantic~=2.11.9",
     "keystoneauth1~=5.1.0",
-    "filelock~=3.16.1",
+    "filelock~=3.19.1",
     "schema~=0.7.7",
     "Werkzeug==3.1.3"
 ]
 
 [project.optional-dependencies]
 rest = [
-    "fastapi~=0.115.12",
-    "uvicorn~=0.34.1"
+    "fastapi~=0.117.1",
+    "uvicorn~=0.36.0"
 ]
 dev = [
-    "ansible>=7.0.0",
-    "ansible_lint==24.9.0",
-    "pylint==3.3",
+    "ansible>=12.0.0",
+    "ansible_lint==25.9.0",
+    "pylint==3.3.8",
     "httpx==0.28.1"
 ]
 
