--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "click~=8.3.0",
     "openstacksdk==0.62",
     "mergedeep~=1.3.4",
-    "paramiko~=4.0.0",
+    "paramiko<4.0.0",
     "python-cinderclient",
     "python-keystoneclient",
     "python-novaclient",
